--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Get possible timezones by phone number",
   "type": "module",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --outfile=dist/index.js",
+    "build": "tsup",
     "generate": "node --experimental-strip-types scripts/generate-data.ts"
   },
   "repository": {
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
-    "esbuild": "0.24.0",
+    "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   }
 }
