--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-    "extends": "@tsconfig/node22/tsconfig.json",
-    "compilerOptions": {
-        "outDir": "./dist"
-    }
+    "extends": "@tsconfig/node22/tsconfig.json"
 }
