--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "generate": "node --experimental-strip-types scripts/generate-data.ts"
+    "generate": "node --experimental-strip-types scripts/generate-data.ts",
+    "test": "borp"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
+    "borp": "^0.18.0",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   }
