--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
     "extends": "@tsconfig/node22/tsconfig.json",
     "compilerOptions": {
+        "module": "Node16",
+        "declaration": true,
+        "declarationDir": "dist/types",
         "outDir": "dist"
     }
 }
