--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "phone-to-timezone",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Get possible timezones by phone number",
   "type": "module",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/index.d.cts",
   "scripts": {
-    "build": "tsup",
+    "build": "rimraf dist && tsup",
+    "prepublishOnly": "npm run test && npm run build",
     "generate": "node --experimental-strip-types scripts/generate-data.ts",
     "test": "borp"
   },
+  "files": [
+    "dist",
+    "package.json",
+    "README.md"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ofekray/phone-to-timezone.git"
@@ -24,6 +30,7 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "borp": "^0.18.0",
+    "rimraf": "^6.0.1",
     "tsup": "^8.3.5",
     "typescript": "^5.6.3"
   }
