--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "phone-to-timezone",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Get possible timezones by phone number",
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.cts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "default": "./dist/index.js"
+  },
   "scripts": {
     "build": "rimraf dist && tsup",
     "prepublishOnly": "npm run test && npm run build",
